[package]
name = "tricoder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.63"
trust-dns-resolver = "0.23.2"
rayon = "1.10.0"
