[package]
name = "tricoder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.63"
trust-dns-resolver = "0.21"
rayon = "1.10.0"
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.30"
tokio-stream = "0.1.16"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
itertools = "0.13.0"
serde_json = "1.0.128"
